Now project  starts but some issues are also there

--- a/.env
+++ b/.env
@@ -4,10 +4,10 @@ LINKEDIN_CLIENT_SECRET=WPL_AP1.9YvV50e1umGE236w.ChAN4g==
 LINKEDIN_ACCESS_TOKEN=
 
 # Gemini API Key
-GEMINI_API_KEY=
+GEMINI_API_KEY=AIzaSyDmiG3PelH33hfneJvyICuIY59ESPMg4UU
 
 # Stability AI API Key
-STABILITY_API_KEY=
+STABILITY_API_KEY=sk-qM6awm57yeCHVC4nn4eybtHo6ABBrb5twI8iAojcPC6Xb56T
 
 # Flask Secret Key (optional, for session security)
 SECRET_KEY=dev-secret-key-change-in-production
